yaml_dockerfile/k8s-yaml/prometheus/prometheus/prometheus-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
  labels:
    name: prometheus
  name: prometheus
  namespace: monitoring
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 7
  selector:
    matchLabels:
      app: prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        blackbox_path: "/"
        blackbox_url: "prometheus.qytangk8s.com"
        blackbox_port: "80"
        blackbox_scheme: "ingressroute"
    spec:
#      nodeName: node01.qytanghost.com
      containers:
      - name: prometheus
        image: harbor.qytanghost.com/monitoring/prometheus:v2.30.3
        imagePullPolicy: IfNotPresent
        command:
        - /bin/prometheus
        args:
        - --config.file=/data/etc/prometheus.yml
        - --storage.tsdb.path=/data/prom-db
        - --storage.tsdb.min-block-duration=10m
        - --storage.tsdb.retention=72h
        - --web.enable-lifecycle
        ports:
        - containerPort: 9090
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
        - name: prometheus-config
          mountPath: /data/etc/prometheus.yml
          subPath: prometheus.yml
        - name: prometheus-rules
          mountPath: /data/etc/rules.yml
          subPath: rules.yml
        - name: ca-cert
          mountPath: /data/etc/ca.pem
          subPath: ca.pem
        - name: etcd-client-cert
          mountPath: /data/etc/etcd-client.pem
          subPath: etcd-client.pem
        - name: etcd-client-key
          mountPath: /data/etc/etcd-client-key.pem
          subPath: etcd-client-key.pem
        resources:
          requests:
            cpu: "4000m"
            memory: "2Gi"
          limits:
            cpu: "8000m"
            memory: "4Gi"
      securityContext:
        runAsUser: 0
      serviceAccountName: prometheus
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prometheus-pvc
            readOnly: false
        - name: prometheus-config
          configMap:
            name: prometheus-config
        - name: prometheus-rules
          configMap:
            name:  prometheus-rules
        - name: ca-cert
          secret:
            secretName: ca-cert
        - name: etcd-client-cert
          secret:
            secretName: etcd-client-cert
        - name: etcd-client-key
          secret:
            secretName: etcd-client-key
